fix creditos centering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -559,4 +559,10 @@ dd {
     font-size: 10px;
   }
 
+  .pull-right {
+    float: none!important;
+  }
+
+  .navbar-nav {
+    margin: 8px 0;
 }
